--- a/PA-1.ipynb
+++ b/PA-1.ipynb
@@ -94,7 +94,7 @@
    ],
    "source": [
     "#Declares the list writeyourcodehere\n",
-    "writeyourcodehere = [1,2,3,4,5,6,] \n",
+    "writeyourcodehere = [1,2,3,4,5,6] \n",
     "#prints the first value on the list with the index of 0\n",
     "print(\"First:\", writeyourcodehere[0]) \n",
     "\n",
